tests/models/enum/named/unit/fail/min_length.stderr
error: Support condition is alias, default
 --> tests/models/enum/named/unit/fail/min_length.rs:6:9
  |
6 |         value: ()
  |         ^^^^^
